# QR_code

./: CMakeLists.txt
include/: qr_code.h  reed_solomon.h
src/: main.cpp  qr_code.cpp  reed_solomon.cpp
